# fairmind

./: .env.prisma  .gitignore  .pre-commit-config.yaml  .temp-review.md  ADVANCED_FAIRNESS_ANALYSIS_PLAN.md  AI_BOM_GUIDE.md  AI_BOM_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  BRANDING_CHECKLIST.md  BRANDING_IMPLEMENTATION.md  CHANGELOG.md  CHAT_COMMAND_INTERFACE_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_QUALITY_STANDARDS.md  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  COMPLIANCE_REPORTING.md  CONTRIBUTING.md  CRITICAL_SECURITY_FIXES_COMPLETED.md  CYCLONEDX_AIBOM_GUIDE.md  DATABASE_MIGRATION_COMPLETED.md  DATA_STORYTELLING_PLAN.md  ENDPOINT_IMPLEMENTATION.md  ENTERPRISE_READINESS_PLAN.md  FAIRMIND_SPRINT_PLAN.md  FEATURE_CHECKLIST.md  FINAL_TESTING_SUMMARY.md  GITHUB_ACTIONS_GUIDE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  ISSUE_TRACKING_GUIDE.md  LARGE_FILE_HANDLING.md  LICENSE  LLMJUDGE_IMPLEMENTATION_SUMMARY.md  LOCAL_TESTING_GUIDE.md  MLOPS_INTEGRATION_DELIVERY.md  MULTI_ORG_TEST_GUIDE.md  MVP_DEPLOYMENT_GUIDE.md  NEON_MIGRATION_AUDIT.md  NEXT_STEPS.md  (+38 more)
apps/backend/: COMPLIANCE_QUICK_REFERENCE.md  COMPLIANCE_REPORTS_GUIDE.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_REPORT_COMPLIANCE.md  INDIA_COMPLIANCE_IMPLEMENTATION_SUMMARY.md  INDIA_COMPLIANCE_SETUP.md  INDIA_FRAMEWORKS_DOCUMENTATION.md  LLM_TESTING_GUIDE.md  MONITORING_OBSERVABILITY_QUICK_REFERENCE.md  ORG_ADMIN_QUICK_REFERENCE.md  ORG_ISOLATION_IMPLEMENTATION.md  ORG_MEMBER_MANAGEMENT_IMPLEMENTATION.md  PERMISSION_SYSTEM_IMPLEMENTATION.md  PRODUCTION_IMPROVEMENTS.md  QUICK_DEPLOY_OPTIONS.md  QUICK_FIX_REFERENCE.md  RAILWAY_PHASE2_DEPLOYMENT.md  README.md  README_NEW_STRUCTURE.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SERVICE_MIGRATION_GUIDE.md  SETUP.md  SOTA_METHODS.md  TASK_13_MONITORING_OBSERVABILITY_SUMMARY.md  TASK_1_CHECKLIST.md  TASK_2_COMPLETION_REPORT.md  TASK_2_IMPLEMENTATION_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  catalog_manager.py  database  deploy_phase2_railway.sh  main.py  playwright.config.py  pyproject.toml  requirements-light.txt  requirements.txt  (+29 more)
apps/backend/_legacy_backup/routes/: india_compliance.py  monitoring.py
apps/backend/_legacy_backup/services/: india_compliance_service.py  multimodal_bias_detection_service.py
apps/backend/api/: main.py  middleware  registry.py  repositories  routes  schemas  services  versioning.py
apps/backend/api/middleware/: audit_logging.py  india_compliance_auth.py  india_compliance_validation.py  input_sanitization.py  rbac.py
apps/backend/api/repositories/: ai_bom_repository.py
apps/backend/api/routes/: __init__.py  advanced_bias_detection.py  advanced_fairness.py  ai_governance.py  auth.py  benchmark_suite.py  bias_detection.py  bias_detection_v2.py  compliance_check.py  compliance_reporting.py  comprehensive_bias_evaluation.py  core.py  database.py  datasets.py  fairness_governance.py  governance.py  mlops.py  (+13 more)
apps/backend/config/: auth.py  authentik_config.py  cache.py  database.py  env.example  jwt_config.py  jwt_exceptions.py  jwt_models.py  logging.py  settings.py  validator.py
apps/backend/core/: __init__.py  base_service.py  container.py  exceptions.py  interfaces.py  logging.py
apps/backend/database/: connection.py  duckdb_manager.py  india_compliance_models.py  india_rag_models.py  models.py
apps/backend/docs/: MIGRATION_PLAN.md  PERMISSION_DECORATORS.md  README_PERMISSIONS.md  USING_PERMISSION_DECORATORS.md
apps/backend/domain/: __init__.py
apps/backend/fairness_library/: __init__.py  governance.py  india_regulatory_frameworks.py  llm_bias.py  metrics.py  monitoring.py  registry.py
apps/backend/health/: __init__.py  checker.py  routes.py
apps/backend/infrastructure/: __init__.py
apps/backend/middleware/: security.py
apps/backend/migrations/: 001_initial_schema.sql  002_india_compliance_schema.sql  003_india_compliance_indexes_and_constraints.py  005_india_compliance_metrics.sql  006_india_compliance_alerts.sql  007_org_rbac_schema.sql  007_org_rbac_schema_CORRECTED.sql  008_governance_canonical.sql  009_policy_versions.sql
apps/backend/scripts/: SEEDING.md  check_all_databases.py  check_supabase_data.py  check_supabase_via_client.py  create_dev_user.py  create_sample_models.py  create_sample_real_model.py  create_tables.py  init_database.py  list_gemini_models.py  migrate.py  migrate_neon_runtime_tables.py  migrate_sqlite.py  onboard_real_model.py  pilot_bootstrap.sh  pilot_readiness_check.py  run_baseline_model_eval.py  seed_database.py  seed_datasets.py  seed_demo_data.py  seed_india_compliance_data.py  seed_models.py  seed_models_api.py  seed_models_realistic.py  seed_models_simple.py  start.py  supabase_storage_setup.sql  test_gemini_integration.py  verify_neon_migration.py
apps/backend/services/: DATASET_STORAGE_README.md  MLOPS_IMPLEMENTATION_SUMMARY.md  MLOPS_INTEGRATION.md  MLOPS_QUICK_START.md  MLOPS_README.md  MLOPS_SETUP_CHECKLIST.md  bias_remediation.py  bias_test_results.py  cyclonedx_aibom_service.py  dataset_storage.py  fairness_metrics.py  health.py  llm_bias_metrics.py  mlops_integration.py  mlops_logger.py  model_storage_service.py  monitoring.py  neon_data_api.py
apps/backend/shared/: constants.py  utils.py
apps/backend/supabase/: 004_india_compliance_rag_setup.sql  bias_test_results_setup.sql  datasets_and_simulation.sql  datasets_storage_setup.sql  execute_phase1_migration.sql  ml_models_fix.sql  remote_ml_models_setup.sql  seed.sql
apps/backend/tests/: conftest.py  test_accept_invitation_endpoint.py  test_ai_compliance_automation.py  test_ai_governance_routes.py  test_api.py  test_api_endpoints.py  test_auth_integration.py  test_bias_bench.py  test_compliance_reports.py  test_fairness_evidence_profile_route.py  test_fairness_evidence_profile_service.py  test_health.py  test_improvements.py  test_jwt_manager.py  test_llm_judge_routes.py  test_multi_org_e2e.py  test_org_management.py  test_org_permissions.py  test_rbac_performance.py  test_rbac_security.py  test_security_encryption.py
(+1546 files in other folders)
